<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <!--背景图-->
    <!--centerCrop设置图片模式为居中裁剪，确保图片填满屏幕且不变形-->
    <ImageView
        android:id="@+id/bodyBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/background_login_register"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 欢迎标题 -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_banner"
        android:textColor="@color/gray_dark_100"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tabContainer"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent">

        <!-- 验证码登录 -->
        <TextView
            android:id="@+id/tabVerifyCode"
            android:layout_width="93dp"
            android:layout_height="30dp"
            android:text="@string/login_verification_code"
            android:gravity="center"
            android:background="@color/transparent"
            android:textColor="@color/tab_text_selector"/>

        <!-- 间隔20dp -->
        <View
            android:layout_width="20dp"
            android:layout_height="6dp" />

        <!-- 密码登录 -->
        <TextView
            android:id="@+id/tabPassword"
            android:layout_width="93dp"
            android:layout_height="30dp"
            android:text="@string/login_password"
            android:gravity="center"
            android:background="@color/transparent"
            android:textColor="@color/tab_text_selector"/>

    </LinearLayout>
    <!-- 页面容器 -->
    <FrameLayout
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintTop_toBottomOf="@id/tabContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>